# Poliwallet

./: .gitignore  Fluence Node.md  LICENSE  README.md  fetch-nfts.aqua  fetch-nfts.ts
client/aqua/: getting-started.aqua
client/src/: App.tsx
client/src/_aqua/: getting-started.ts
mobile_app/: .gitignore  README.md  pubspec.yaml
mobile_app/android/app/: build.gradle
mobile_app/assets/data/: coins.json  rarible-test.json
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/lib/core/models/: os_asset_contract_model.dart  os_asset_contract_model.g.dart  os_asset_list_model.dart  os_asset_model.dart  os_asset_model.g.dart  os_collections.dart  os_collections.g.dart  os_collections_list.dart  rr_collections.dart  rr_collections.g.dart
mobile_app/lib/core/services/: opensea_svc.dart  rarible_svc.dart
mobile_app/lib/ui/pages/: addnewitem_screen.dart  coins_screen.dart  (+8 more)
mobile_app/lib/utils/: constants.dart
mobile_app/test/: widget_test.dart
mobile_app/web/: index.html  manifest.json
nft-wallet/: deployed_marketplace_service.data
nft-wallet/artifacts/: deploy.json
nft-wallet/client/aqua/: fetch-nfts.aqua
nft-wallet/configs/: Config.toml  marketplace_service_config.json
nft-wallet/marketplace-service/: Cargo.toml
nft-wallet/marketplace-service/src/: main.rs
nft-wallet/scripts/: build.sh  deploy.sh
service/: Cargo.toml  deployed.txt  marketplace.aqua
service/artifacts/: deploy.json  marketplace-service.wasm
service/scripts/: build.sh  deploy.sh
service/src/: main.rs
(+28 files in other folders)
