[package]
name = "marketplace-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "=0.6.11", features = ["logger"] }
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

